# sm-tool

./: README.md  pyproject.toml  sm.py
iter1/: Closures.md  Customer_Ask.md  Iter_1_Retro.md  Operator_Answers.md  Requirements_v1.md  Requirements_v2.md  Sprint_1_Plan.md  Sprint_1_Retro.md  Stories_v1.md
iter2/: Closures.md  Customer_Ask.md  Findings.md  Operator_Answers.md  Requirements_v1.md  Requirements_v2.md  Retro.md  Smoke_Run_Checklist.md  Sprint_1_Plan.md  Sprint_2_Plan.md  Stories_v1.md  run_smoke.ps1  run_smoke_phase2.ps1  smoke_handoff.json  smoke_log.jsonl
iter3/: Findings.md
iter4/: Customer_Ask.md  Pivot_Notes.md  Requirements_v1.md  Retro.md  dogfood_open.ps1  dogfood_story1.ps1  handoff.json  handoff_v2.json  iter4_log.jsonl  sm.py
roles/: coder.md  reviewer.md  sm_agent.md  test_writer.md
tests/: conftest.py  test_aggregate_requirements.py  test_anthropic_dep.py  test_append_entry.py  test_build_entry.py  test_clean_state.py  test_close_iteration.py  test_close_iteration_multisprint.py  test_decompose.py  test_decompose_real_spawn.py  test_decompose_validation.py  test_derive_state.py  test_derive_state_multi_sprint_cut.py  test_execute.py  test_execute_materialization_logging.py  test_execute_real_coder.py  test_execute_real_reviewer.py  test_execute_real_test_writer.py  test_force_close.py  test_help_text_multisprint.py  test_ingest.py  test_ingest_validation.py  test_invoke_anthropic.py  test_lifecycle_commands.py  test_materialization_entry_types.py  test_no_live_sdk_calls.py  test_parse_agent_json.py  test_parse_agent_json_fence_strip.py  (+26 more)
(+5 files in other folders)
