[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-tool"
version = "0.3.0-dev"
description = "Scrum-master pipeline tool — story decomposition and per-story execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nick Trolian" }]
dependencies = ["anthropic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
